DevOps-Infra/kubernetes-manifests/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: d4-sample
  namespace: d4-sample
  labels:
    app.kubernetes.io/name: d4-sample
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: d4-sample
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
